gccida/c1/expand_builtin_va_copy
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_va_copy/src/builtins.c:3637:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_va_copy/src/builtins.c:3640:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_va_copy/src/builtins.c:3656:30: error: use of undeclared identifier 'machine_mode'
v5 = expand_expr( v2, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), EXPAND_NORMAL); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_va_copy/src/builtins.c:3657:30: error: use of undeclared identifier 'machine_mode'
v6 = expand_expr( v4, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), EXPAND_NORMAL); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_va_copy/src/obj/builtins.o] Error 1
